ReSharper.FSharp/test/data/parsing/errors/Type decl - Union - No bar - Attribute 01.fs
type U =
    [<A>] A
    | B of int
